Add admin settings, New Relic APM, tenant modules, and Render observability config.
Centralize operational config in app_setting with bootstrap post-processor, expose public health/observability endpoints, bundle the New Relic Java agent in Docker, and document Render env vars for APM and log forwarding.